--- a/frontend/src/css/device-card.css
+++ b/frontend/src/css/device-card.css
@@ -8,7 +8,7 @@ header {
   overflow: hidden;
   position: relative;
   background-color: #fff;
-  width: 480px;
+  width: 460px;
   height: 280px;
   box-sizing: border-box;
 
@@ -60,8 +60,8 @@ header {
   position: absolute;
   width: 100%;
   bottom: -28px;
-  font-size: 22px;
-  padding: 0.1em;
+  font-size: 20px;
+  padding: 0.3em;
   text-align: center;
   background-color: #7692ff;
   text-decoration-line: none;
@@ -69,14 +69,20 @@ header {
   transition: 0.24s;
 }
 
-.card-device-pop-button p {
+.card-device-pop-button p, a {
   padding: 0;
   margin: 0;
-  text-decoration-line: none;
+  /*text-decoration-line: none;*/
+  text-decoration: none !important;
   text-decoration-width: 0;
   color: white;
 }
 
 .card-device:hover .card-device-pop-button {
   bottom: 0;
+}
+
+.card-device-pop-button:hover {
+  /*background-color: #161e45;*/
+  background-color: #5f77de;
 }
